[not for 5.2.0] Fix artifacts when moving a layer under a blur adjustment layer

Basically, KisRefreshSubtreeWalker should explicitly reset change rect
**only** when used in standalone mode. Inside KisFullRefreshWalker
mode the change rect is calculated in advance by the parent walker.

BUG:473853